# dvc-e2e

./: README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_install.py
