[tool.poetry]
name = "dvc-e2e"
version = "0.1.0"
description = "End-to-end tests for dvc"
authors = ["Saugat Pachhai <suagatchhetri@outlook.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.5"
pytest-virtualenv = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

